--- a/app/views/blogo/admin/posts/new_sidebar_link.html.erb
+++ b/app/views/blogo/admin/posts/new_sidebar_link.html.erb
@@ -1,8 +1,11 @@
 <h1>Create New Link</h1>
-<form action="/blog/admin/links" method="post">
-	<input type="text" name="url" placeholder="url" />
-	<input type="text" name="title" placeholder="title" />
-	Active?
-	<input type="checkbox" name="active" />
+<form action="/blog/admin/links" method="post" class="pure-form pure-form-stacked">
+	<label>URL</label>
+	<input type="text" name="url" placeholder="url" /><br />
+	<label>Title</label>
+	<input type="text" name="title" placeholder="title" /><br />
+	<label for="active_url" style="display: inline-block;">Active?</label>
+	<input type="checkbox" name="active" id="active_url" />
+	<br /><br />
 	<input type="submit" name="add_link" />
 </form>
