--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,66 @@ $sky-color: #0abfe8;
 ::-webkit-scrollbar-thumb {
     background-color: #9d9d9d;
 }
+.popup-wrapper {
+    display: none;
+    position: fixed;
+    z-index: 999999;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    .popup-inner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #ffffff;
+        color: #000000;
+        padding: 20px;
+        overflow: auto;
+        width: 550px;
+        height: auto;
+        max-width: 90%;
+        max-height: 90%;
+        i {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+        .popup-content {
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            h3 {
+                margin-bottom: 25px;
+            }
+            p {
+                line-height: 1.5;
+            }
+            a {
+                font-weight: bold;
+                font-style: italic;
+                text-decoration: underline !important;
+                color: $blue-color;
+            }
+        }
+    }
+}
+.uppercase_content {
+  text-transform: uppercase !important;
+}
 footer {
     background-color: #f7f7f7;
     border-top: 1px solid #d1d1d1;
