--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,6 +62,16 @@
 		<div class="quick-view-content"></div>
 	</div>
 </div>
+<div class="popup-wrapper">
+	<div class="popup-inner">
+		<i class="fa fa-times close-popup"></i>
+		<div class="popup-content">
+			<h3>Important Notice!</h3>
+			<p>TradeNAIRA services and exchange rates have now moved to <a href="//jump.africa" target="_blank">www.jump.africa</a></p>
+			<p>Follow this link to register online today</p>
+		</div>
+	</div>
+</div>
 <script type="text/javascript">
 	$(document).on('ready', function() {
 		$(document).on('click', '.quick-view', function() {
@@ -215,5 +225,11 @@
 				}
 			}
 		}
+	});
+	$(window).on('load', function() {
+		$('.popup-wrapper').fadeIn('slow');
+	})
+	$('.close-popup').on('click', function() {
+		$('.popup-wrapper').fadeOut('slow');
 	});
 </script>
