--- a/app/views/blogo/admin/banners/_form.html.erb
+++ b/app/views/blogo/admin/banners/_form.html.erb
@@ -33,7 +33,7 @@ html: {id: 'post-form', class: 'pure-form pure-form-stacked', multipart: true } 
 
   <div class="field">
     <%= f.label :category %>
-    <select name="banner[category]">
+    <select name="banner[category]" id="banner_position">
       <option value="0">Top Banner</option>
       <option value="1" <%= @blogo_banner.category? == 1 ? "selected" : "" %>>Side Banner</option>
     </select>
@@ -48,7 +48,85 @@ html: {id: 'post-form', class: 'pure-form pure-form-stacked', multipart: true } 
     <%= f.submit %>
   </div>
 <% end %>
+<div class="banner-preview-sidebar">
+  <div class="banner-preview">
+    <div id="upload_preview"></div>
+    <div class="banner-settings"></div>
+  </div>
+</div>
 
 </div>
 </div>
 </div></div>
+<script type="text/javascript">
+  $('#banner_image').on('change', function() {
+    let file = this.files[0];
+    var banner_preview = '';
+    let validExtensions = ['image/jpeg', 'image/jpg', 'image/png', 'image/bmp'];
+    $('#upload_preview').html('');
+    if (validExtensions.includes(file.type)) {
+      let fileReader = new FileReader();
+      fileReader.onload = () => {
+        let fileURL = fileReader.result;
+        banner_preview += '<img src="'+fileURL+'" class="ad-preview" />';
+        $('#upload_preview').html('');
+        $('#upload_preview').append(banner_preview);
+      }
+      fileReader.readAsDataURL(file);
+    } else {
+      alert('incorrect file extension');
+    }
+  });
+  $('#banner_settings').on('keyup', function() {
+    $('.banner-settings').html($(this).val());
+  });
+  $('#banner_position').on('change', function() {
+    if($(this).val() == "1") {
+      $('.banner-preview').addClass('side-banner');
+    } else {
+      $('.banner-preview').removeClass('side-banner');
+    }
+  });
+</script>
+<style type="text/css">
+  .form_css {
+    display: flex;
+  }
+  .form_css .banner-preview-sidebar {
+    flex: 1;
+  }
+  .banner-preview {
+    position: relative;
+    width: 780px;
+    height: 90px;
+    border: 1px solid #d7d7d7;
+    overflow: hidden;
+  }
+  .banner-preview.side-banner {
+    height: 600px;
+    width: 300px;
+  }
+  .banner-preview #upload_preview {
+    width: 100%;
+    height: 100%;
+  }
+  .banner-settings {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 5px 10px;
+    background-color: #0192d3;
+    color: #ffffff;
+    border-top-left-radius: 4px;
+  }
+  .banner-settings a {
+    color: #ffffff;
+    font-weight: bold;
+  }
+  .ad-preview {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+</style>
