--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="container-fluid tradenaira-blogo-header">
 	<div class="container">
 		<i class="sidebar-bars fa fa-bars"></i>
-		<a href="/"><img class="logo-image" src="/assets/tradenaira.png" /></a>
+		<a href="/"><img class="logo-image" src="/assets/tradenaira.png" alt="tradenaira logo white" /></a>
 		<i class="search-btn fa fa-search"></i>
 	</div>
 </header>
