--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 						<div class="bar"></div>
 					</div>
 					<div class="text">
-						<h1><%= latest_post.title %></h1>
+						<h2><%= latest_post.title %></h2>
 						<p><%= latest_post.raw_content.gsub(@re, '').gsub('&nbsp;','')[0,60] %>...</p>
 					</div>
 					<a href="/blogs/<%= latest_post.permalink %>" class="more">Read more</a>
@@ -28,7 +28,7 @@
 				<div class="col-3 blog-card">
 					<div class="col">
 						<div class="image">
-							<a href="/blogs/<%= post.permalink %>"><img src="<%= post.meta_image %>"></a>
+							<a href="/blogs/<%= post.permalink %>"><img src="<%= post.meta_image %>" alt="<%= post.title %>"></a>
 							<time><%= I18n.localize(post.published_at.to_date, format: :long) %></time>
 						</div>
 						<div class="content">
@@ -194,7 +194,7 @@
 									posts += `<div class="col-3 blog-card">
 													<div class="col">
 														<div class="image">
-															<a href="/blogs/${value.permalink}"><img src="${value.meta_image}"></a>
+															<a href="/blogs/${value.permalink}"><img src="${value.meta_image}" alt="${value.title}"></a>
 															<time>${month} ${iso_date[2]}, ${iso_date[0]}</time>
 														</div>
 														<div class="content">
