--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="container-fluid pt-5 pb-5">
   <div class="container">
     <div class="row footer-info mb-4">
-      <img class="col-12" src="/assets/logo.png" />
+      <img class="col-12" src="/assets/logo.png" alt="tradenaira logo coloured" />
       <p class="col-12 mt-4">Copyright © 2021 TradeNaira. All rights reserved. Use of this site constitutes acceptance of our Terms of Service, Privacy Policy and Cookies Policy.</p>
     </div>
     <div class="row social-links-row">
