--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -507,6 +507,11 @@ footer {
     }
 }
 .all-blogs {
+    .blogo-heading {
+        font-size: 32px;
+        padding: 0 10px;
+        margin-bottom: 25px;
+    }
     .post-loader {
         display: flex;
         justify-content: center;
