--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,3 +15,4 @@
     </div>
   </div>
 </footer>
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=107274bc-dacb-4bdf-9426-d877e0b16161"> </script>
