--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,90 +21,7 @@
 		<% end %>
 	</div>
 </div>
-<ul class="jump-liveprices container">
-	<li class="col" data-pair="usdngn">
-		<span class="pair">USD|NGN</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="gbpngn">
-		<span class="pair">GBP|NGN</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="eurngn">
-		<span class="pair">EUR|NGN</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="ghsngn">
-		<span class="pair">GHS|NGN</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="zarngn">
-		<span class="pair">ZAR|NGN</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="kesngn">
-		<span class="pair">KES|NGN</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="usdghs">
-		<span class="pair">USD|GHS</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="gbpghs">
-		<span class="pair">GBP|GHS</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-	<li class="col" data-pair="usdkes">
-		<span class="pair">USD|KES</span>
-		<span class="last-price"></span>
-		<span class="percent-change"></span>
-	</li>
-</ul>
-<script type="text/javascript">
-	var currency_obj = {
-		"usdngn": "₦",
-		"gbpngn": "₦",
-		"eurngn": "₦",
-		"ghsngn": "₦",
-		"zarngn": "₦",
-		"kesngn": "₦",
-		"usdghs": "¢",
-		"gbpghs": "¢",
-		"usdkes": "K"
-	}
-	$.each($('.jump-liveprices li'), function() {
-		var pair = $(this).data('pair')
-		$.ajax({
-      type: 'GET',
-      url: `//jump.africa/liveprice/${pair}`,
-      dataType: "json",
-      success:function(data){
-      	if(data.data.trades[0])
-       		price = data.data.trades[0]['price'];
-       	percent_change = data.data.price_change;
-        console.log(`pair: ${pair}\nlast price: ${price}\nprice_change: ${percent_change}`);
-        $(`.jump-liveprices li[data-pair="${pair}"]`).find('.last-price').html(`${currency_obj[pair]}${price}`);
-        if(percent_change < 0) {
-        	percent_change_html = `<i class="fa fa-arrow-down"></i>${percent_change}`;
-        } else {
-        	percent_change_html = `<i class="fa fa-arrow-up"></i>${percent_change}`;
-        }
-        $(`.jump-liveprices li[data-pair="${pair}"]`).find('.percent-change').html(percent_change_html);
-      },
-      error:function(data){
-      alert("Error");
-      }
-    });
-	});
-</script>
+<%= render partial: "shared/liveprices" %>
 <div class="container-fluid pt-5 pb-5">
 	<div class="container all-blogs">
 		<h1 class="blogo-heading">Blogs</h1>
