--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/liveprices" %>
 <div class="container-fluid pt-5 pb-5 blogo-show">
     <div class="container">
         <div class="advert-banner top_banner">
