remove landing page pop up and add hellobar js, increase pool size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
 </head>
 <body>
+<script src="https://my.hellobar.com/07871daf436ac40d5ad5c78185b23a9ef784f835.js" type="text/javascript" charset="utf-8" async="async"> </script>
 <%= render partial: 'shared/header' %>
 <%= yield %>
 <%= render partial: 'shared/footer' %>
