--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,7 +64,7 @@
 		<div class="quick-view-content"></div>
 	</div>
 </div>
-<div class="popup-wrapper">
+<!-- <div class="popup-wrapper">
 	<div class="popup-inner">
 		<i class="fa fa-times close-popup"></i>
 		<div class="popup-content">
@@ -73,7 +73,7 @@
 			<p>Follow this link to register online today</p>
 		</div>
 	</div>
-</div>
+</div> -->
 <script type="text/javascript">
 	$(document).on('ready', function() {
 		$(document).on('click', '.quick-view', function() {
@@ -228,10 +228,10 @@
 			}
 		}
 	});
-	$(window).on('load', function() {
-		$('.popup-wrapper').fadeIn('slow');
-	})
-	$('.close-popup').on('click', function() {
-		$('.popup-wrapper').fadeOut('slow');
-	});
+	// $(window).on('load', function() {
+	// 	$('.popup-wrapper').fadeIn('slow');
+	// })
+	// $('.close-popup').on('click', function() {
+	// 	$('.popup-wrapper').fadeOut('slow');
+	// });
 </script>
