--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,8 +39,36 @@ $sky-color: #0abfe8;
         padding: 5px 15px;
         border-left: 1px solid $blue-color;
         margin: 10px 0;
+        position: relative;
+        .rate-popup {
+            position: absolute;
+            display: none;
+            bottom: -10px;
+            left: 50%;
+            transform: translate(-50%, 100%);
+            text-align: center;
+            color: white;
+            line-height: 1.5;
+            background: $blue-color;
+            padding: 2px 10px;
+            border-radius: 4px;
+            width: 200px;
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%) translateY(calc(-100% + 1px));
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent transparent $blue-color;
+            }
+        }
         &:hover {
           background-color: #f2fcff;
+          .rate-popup {
+            display: block;
+          }
         }
         .pair {
             display: block;
