--- a/app/views/shared/_liveprices.html.erb
+++ b/app/views/shared/_liveprices.html.erb
@@ -19,7 +19,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">Naira to GBP parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="eurngn">
     <span class="pair">
@@ -30,7 +30,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">Naira to EURO parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="ghsngn">
     <span class="pair">
@@ -41,7 +41,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="zarngn">
     <span class="pair">
@@ -52,7 +52,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">Naira to ZAR parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="kesngn">
     <span class="pair">
@@ -63,7 +63,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">Naira to KES parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="usdghs">
     <span class="pair">
@@ -74,7 +74,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="gbpghs">
     <span class="pair">
@@ -85,7 +85,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">GHS to GBP parallel rate today at <time class="user-time"></time></div>
   </li>
   <li class="col" data-pair="usdkes">
     <span class="pair">
@@ -96,7 +96,7 @@
       <span class="psymbol">%</span>
       <span class="change"></span>
     </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <div class="rate-popup">KES to Dollar parallel rate today at <time class="user-time"></time></div>
   </li>
 </ul>
 <script type="text/javascript">
