--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,9 +22,8 @@
 	</div>
 </div>
 <%= render partial: "shared/liveprices" %>
-<div class="container-fluid pt-5 pb-5">
+<div class="container-fluid pb-5">
 	<div class="container all-blogs">
-		<h1 class="blogo-heading">Blogs</h1>
 		<div class="row append_posts">
 			<% @posts.each do |post| %>
 				<div class="col-3 blog-card">
