--- a/app/views/shared/_custom_routes.html.erb
+++ b/app/views/shared/_custom_routes.html.erb
@@ -1,4 +1,5 @@
-<div class="container-fluid pt-5 pb-5 blogo-show">
+<%= render partial: "shared/liveprices" %>
+<div class="container-fluid pb-5 blogo-show">
     <div class="container">
         <div class="advert-banner top_banner">
             <% banner = rand_banner(:news_home_top) %>
