--- a/app/views/shared/_liveprices.html.erb
+++ b/app/views/shared/_liveprices.html.erb
@@ -1,102 +1,120 @@
 <ul class="jump-liveprices container">
   <li class="col" data-pair="usdngn">
-    <span class="pair">
-      <span class="pair-name">USD|NGN</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">USD|NGN</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="gbpngn">
-    <span class="pair">
-      <span class="pair-name">GBP|NGN</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to GBP parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">GBP|NGN</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to GBP parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="eurngn">
-    <span class="pair">
-      <span class="pair-name">EUR|NGN</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to EURO parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">EUR|NGN</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to EURO parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="ghsngn">
-    <span class="pair">
-      <span class="pair-name">GHS|NGN</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">GHS|NGN</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="zarngn">
-    <span class="pair">
-      <span class="pair-name">ZAR|NGN</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to ZAR parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">ZAR|NGN</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to ZAR parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="kesngn">
-    <span class="pair">
-      <span class="pair-name">KES|NGN</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to KES parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">KES|NGN</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to KES parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="usdghs">
-    <span class="pair">
-      <span class="pair-name">USD|GHS</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">USD|GHS</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="gbpghs">
-    <span class="pair">
-      <span class="pair-name">GBP|GHS</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">GHS to GBP parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">GBP|GHS</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">GHS to GBP parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
   <li class="col" data-pair="usdkes">
-    <span class="pair">
-      <span class="pair-name">USD|KES</span>
-      <span class="last-price"></span>
-    </span>
-    <span class="percent-change">
-      <span class="psymbol">%</span>
-      <span class="change"></span>
-    </span>
-    <div class="rate-popup">KES to Dollar parallel rate today at <time class="user-time"></time></div>
+    <a href="//jump.africa/signup">
+      <span class="pair">
+        <span class="pair-name">USD|KES</span>
+        <span class="last-price"></span>
+      </span>
+      <span class="percent-change">
+        <span class="psymbol">%</span>
+        <span class="change"></span>
+      </span>
+      <div class="rate-popup">KES to Dollar parallel rate today at <time class="user-time"></time></div>
+    </a>
   </li>
 </ul>
 <script type="text/javascript">
