--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,44 +31,50 @@ $sky-color: #0abfe8;
     margin: 20px auto;
     font-size: 14px;
     li {
-        cursor: pointer;
         display: flex;
-        flex: 1;
-        flex-grow: 0;
-        flex-shrink: 1;
-        padding: 5px 15px;
-        border-left: 1px solid $blue-color;
-        margin: 10px 0;
-        position: relative;
-        .rate-popup {
-            position: absolute;
-            display: none;
-            bottom: -10px;
-            left: 50%;
-            transform: translate(-50%, 100%);
-            text-align: center;
-            color: white;
-            line-height: 1.5;
-            background: $blue-color;
-            padding: 2px 10px;
-            border-radius: 4px;
-            width: 200px;
-            &::before {
-                content: '';
+        a {
+            text-decoration: none;
+            color: #000000;
+            cursor: pointer;
+            display: flex;
+            flex: 1;
+            padding: 5px 15px;
+            border-left: 1px solid $blue-color;
+            margin: 10px 0;
+            position: relative;
+            .rate-popup {
                 position: absolute;
-                top: 0;
+                display: none;
+                bottom: -10px;
                 left: 50%;
-                transform: translateX(-50%) translateY(calc(-100% + 1px));
-                border-width: 5px;
-                border-style: solid;
-                border-color: transparent transparent $blue-color;
+                transform: translate(-50%, 100%);
+                text-align: center;
+                color: white;
+                line-height: 1.5;
+                background: $blue-color;
+                padding: 2px 10px;
+                border-radius: 4px;
+                width: 200px;
+                z-index: 1;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    transform: translateX(-50%) translateY(calc(-100% + 1px));
+                    border-width: 5px;
+                    border-style: solid;
+                    border-color: transparent transparent $blue-color;
+                }
             }
         }
         &:hover {
-          background-color: #f2fcff;
-          .rate-popup {
-            display: block;
-          }
+            a {
+                background-color: #f2fcff;
+                .rate-popup {
+                    display: block;
+                }
+            }
         }
         .pair {
             display: block;
@@ -86,7 +92,9 @@ $sky-color: #0abfe8;
             }
         }
         &:last-of-type {
-            border-right: 1px solid $blue-color;
+            a {
+                border-right: 1px solid $blue-color;
+            }
         }
     }
 }
