--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "shared/liveprices" %>
-<div class="container-fluid pt-5 pb-5 blogo-show">
+<div class="container-fluid pb-5 blogo-show">
     <div class="container">
         <div class="advert-banner top_banner">
             <% banner = rand_banner(:news_home_top) %>
