--- a/app/views/shared/_liveprices.html.erb
+++ b/app/views/shared/_liveprices.html.erb
@@ -9,7 +9,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to Dollar parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="gbpngn">
@@ -22,7 +22,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to GBP parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to GBP parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="eurngn">
@@ -35,7 +35,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to EURO parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to EURO parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="ghsngn">
@@ -48,7 +48,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="zarngn">
@@ -61,7 +61,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to ZAR parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to ZAR parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="kesngn">
@@ -74,7 +74,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to KES parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to KES parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="usdghs">
@@ -87,7 +87,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">Naira to GHS parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="gbpghs">
@@ -100,7 +100,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">GHS to GBP parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">GHS to GBP parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
   <li class="col" data-pair="usdkes">
@@ -113,7 +113,7 @@
         <span class="psymbol">%</span>
         <span class="change"></span>
       </span>
-      <div class="rate-popup">KES to Dollar parallel rate today at <time class="user-time"></time></div>
+      <div class="rate-popup">KES to Dollar parallel rate today at <time class="user-time"></time> in <span class="user-location"></span></div>
     </a>
   </li>
 </ul>
@@ -162,4 +162,5 @@
     var n = d.toLocaleTimeString();
     $('.user-time').html(n);
   }, 1000);
+  $('.user-location').html("<%= @user_region[:region] %>");
 </script>
